--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/HazeyamaLab/look-back-functions#readme",
   "dependencies": {
+    "@octokit/rest": "^18.0.6",
     "netlify-lambda": "^2.0.1"
   }
 }
