--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/HazeyamaLab/look-back-functions#readme",
   "dependencies": {
+    "@octokit/auth": "^2.0.0",
     "@octokit/rest": "^18.0.6",
+    "dotenv": "^8.2.0",
     "netlify-lambda": "^2.0.1"
   }
 }
